# aoc-2023

./: .gitignore  Cargo.toml  tasks.py
benchmark/benches/: criterion.rs  iai.rs
day01/: problem.md
day01/src/: lib.rs
day02/: problem.md
day02/src/: lib.rs
day03/: Cargo.toml  problem.md
day03/src/: lib.rs
day04/: problem.md
day04/src/: lib.rs
day05/: problem.md
day05/src/: lib.rs  main.rs
day06/: problem.md
day06/src/: lib.rs
day07/: Cargo.toml  problem.md
day07/src/: lib.rs  part1.rs  part2.rs
day08/: Cargo.toml  problem.md
day08/src/: lib.rs
day09/: problem.md
day09/src/: lib.rs
day10/: Cargo.toml  problem.md
day10/src/: lib.rs
day11/: problem.md
day11/src/: lib.rs
day12/: Cargo.toml  problem.md
day12/src/: lib.rs
day13/: problem.md
day13/src/: lib.rs  main.rs
day14/: Cargo.toml  problem.md
day14/src/: lib.rs
day15/: Cargo.toml  problem.md
day15/src/: lib.rs
day16/: Cargo.toml  problem.md
day16/src/: lib.rs
day17/: Cargo.toml  problem.md
day17/src/: lib.rs
day18/: problem.md
day18/src/: lib.rs
day19/: Cargo.toml  problem.md
day19/src/: lib.rs
day20/: Cargo.toml  problem.md
day20/src/: lib.rs  main.rs
day21/: Cargo.toml  problem.md
day21/benches/: my_benchmark.rs
day21/src/: lib.rs  main.rs  part1.rs  part2.rs
day22/: Cargo.toml  problem.md
day22/benches/: parts.rs  simulation.rs
day22/src/: lib.rs  main.rs
day23/: 23.py  Cargo.toml  problem.md
day23/benches/: benchy.rs  parts.rs
day23/src/: lib.rs  part1.rs  part2.rs
day24/: Cargo.toml  problem.md
day24/src/: lib.rs
day25/: Cargo.toml  problem.md
day25/src/: lib.rs  main.rs
