[workspace]
members = [ "benchmark", "day01", "day02", "day03", "day04", "day05", "day06", "day07", "day08", "day09", "day10", "day11", "day12", "day13", "day14", "day15" ]
resolver = "2"

[workspace.metadata]
year = 2023

[workspace.metadata.day06]
completion_time = 2023-12-06T15:00:43.144781

[workspace.metadata.day07]
start_time = 2023-12-07T13:09:06.965940
completion_time = 2023-12-07T13:47:10.350318

[workspace.metadata.day08]
start_time = 2023-12-08T14:18:45.067798
completion_time = 2023-12-08T14:50:47.947798

[workspace.metadata.day09]
start_time = 2023-12-09T14:28:57.853604
completion_time = 2023-12-09T14:41:06.205975

[workspace.metadata.day10]
start_time = 2023-12-10T14:22:54.492803
completion_time = 2023-12-10T15:43:02.730992

[workspace.metadata.day11]
start_time = 2023-12-11T14:27:01.426903
completion_time = 2023-12-11T15:03:36.116395

[workspace.metadata.day12]
start_time = 2023-12-12T08:50:55.234619
completion_time = 2023-12-12T20:32:06.698710

[workspace.metadata.day13]
start_time = 2023-12-13T07:19:56.788230
completion_time = 2023-12-13T08:08:03.972522

[workspace.metadata.day14]
start_time = 2023-12-14T10:25:01.985993
completion_time = 2023-12-14T11:11:15.156663

[workspace.metadata.day15]
start_time = 2023-12-15T12:22:40.721370
completion_time = 2023-12-15T12:40:14.438500
