[workspace]
members = [ "benchmark", "day01", "day02", "day03", "day04", "day05", "day06", "day07", "day08", "day09", "day10", "day11", "day12", "day13", "day14", "day15", "day16", "day17", "day18", "day19", "day20" ]
resolver = "2"

[workspace.metadata]
year = 2023

[workspace.metadata.day06]
completion_time = 2023-12-06T15:00:43.144781

[workspace.metadata.day07]
start_time = 2023-12-07T13:09:06.965940
completion_time = 2023-12-07T13:47:10.350318

[workspace.metadata.day08]
start_time = 2023-12-08T14:18:45.067798
completion_time = 2023-12-08T14:50:47.947798

[workspace.metadata.day09]
start_time = 2023-12-09T14:28:57.853604
completion_time = 2023-12-09T14:41:06.205975

[workspace.metadata.day10]
start_time = 2023-12-10T14:22:54.492803
completion_time = 2023-12-10T15:43:02.730992

[workspace.metadata.day11]
start_time = 2023-12-11T14:27:01.426903
completion_time = 2023-12-11T15:03:36.116395

[workspace.metadata.day12]
start_time = 2023-12-12T08:50:55.234619
completion_time = 2023-12-12T20:32:06.698710

[workspace.metadata.day13]
start_time = 2023-12-13T07:19:56.788230
completion_time = 2023-12-13T08:08:03.972522

[workspace.metadata.day14]
start_time = 2023-12-14T10:25:01.985993
completion_time = 2023-12-14T11:11:15.156663

[workspace.metadata.day15]
start_time = 2023-12-15T12:22:40.721370
completion_time = 2023-12-15T12:40:14.438500

[workspace.metadata.day16]
start_time = 2023-12-16T10:59:45.172853
completion_time = 2023-12-16T11:56:18.413857

[workspace.metadata.day17]
start_time = 2023-12-17T12:39:39.200430
completion_time = 2023-12-17T13:20:10.454331

[workspace.metadata.day18]
start_time = 2023-12-18T14:33:28.171902
completion_time = 2023-12-18T16:06:11.155186

[workspace.metadata.day19]
start_time = 2023-12-19T09:58:31.232392
completion_time = 2023-12-19T12:02:47.549006

[workspace.metadata.day20]
start_time = 2023-12-20T08:33:02.992114
completion_time = 2023-12-20T16:06:54.990478
