[package]
name = "day21"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bucket_queue = "2.0.0"
colorgrad = "0.6.2"
grid = "0.13.0"
image = "0.24.7"
owo-colors = "4.0.0"
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false
