[package]
name = "day22"
version = "0.1.0"
edition = "2021"

[dependencies]
fixedbitset = "0.4.2"
grid = "0.13.0"
hi_sparse_bitset = "0.3.0"
hibitset = "0.6.4"
itertools = "0.12.0"
petgraph = "0.6.4"
rayon = "1.8.0"
rustc-hash = "1.1.0"

[[bench]]
name = "simulation"
harness = false

[dev-dependencies]
criterion = "0.5.1"
