[package]
name = "day23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
grid = "0.13.0"
im = "15.1.0"
num-traits = "0.2.17"
petgraph = "0.6.4"
rayon = "1.8.0"
rustc-hash = "1.1.0"

[[bench]]
name = "parts"
harness = false

[dev-dependencies]
criterion = "0.5.1"
